--- a/painel_professor.html
+++ b/painel_professor.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Teacher Dashboard</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
       font-family: 'Poppins', sans-serif;
@@ -28,6 +29,7 @@
       margin: 20px auto;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+      width: 90%;
       max-width: 600px;
       text-align: left;
     }
@@ -203,6 +205,10 @@
     }
 
     function saveTeacherData() {
+      const button = document.querySelector('button');
+      button.disabled = true;
+      button.textContent = 'Saving...';
+
       const teacherId = auth.currentUser.uid;
       const teacherRef = db.ref('usuarios/' + teacherId);
 
@@ -216,14 +222,22 @@
         alert("Teacher data saved successfully!");
       }).catch(error => {
         console.error("Error updating data:", error);
+      }).finally(() => {
+        button.disabled = false;
+        button.textContent = 'Save Changes';
       });
     }
 
+    document.getElementById('teacher-avatar').addEventListener('change', function() {
+      const avatar = this.value;
+      document.getElementById('avatar-preview').src = 'imagens/' + avatar;
+    });
+
     function loadClasses(teacherId) {
       const classesRef = db.ref('usuarios/' + teacherId + '/turmas');
-      classesRef.once('value', snapshot => {
+      classesRef.on('value', snapshot => {
         const classList = document.getElementById('class-list');
-        classList.innerHTML = ''; // Clear any previous content
+        classList.innerHTML = '';
 
         snapshot.forEach(childSnapshot => {
           const classData = childSnapshot.val();
@@ -282,7 +296,7 @@
 
     function loadStudents(teacherId, classId) {
       const studentList = document.getElementById(`student-list-${classId}`);
-      studentList.innerHTML = ''; // Clear the list
+      studentList.innerHTML = ''; 
 
       const studentsRef = db.ref(`usuarios/${teacherId}/turmas/${classId}/students`);
       studentsRef.once('value', snapshot => {
@@ -334,6 +348,7 @@
       
       if (progressContainer.style.display === 'none' || progressContainer.style.display === '') {
         progressContainer.style.display = 'block';
+        progressContainer.innerHTML = '<p>Loading...</p>';
 
         db.ref(`usuarios/${studentId}/progresso`).once('value', snapshot => {
           let progressHTML = '<h3>Progress</h3>';
@@ -355,7 +370,6 @@
           });
           progressContainer.innerHTML = progressHTML;
         });
-
       } else {
         progressContainer.style.display = 'none';
       }
