--- a/painel_professor.html
+++ b/painel_professor.html
@@ -120,9 +120,38 @@
       font-weight: bold;
       margin-left: 10px;
     }
+
+    /* Back button styling */
+    .back-button {
+      background-color: #555;
+      color: white;
+      padding: 10px 20px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 1em;
+      transition: background-color 0.3s ease;
+      margin-top: 15px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+    }
+
+    .back-button:hover {
+      background-color: #333;
+    }
+
+    .back-container {
+      display: flex;
+      justify-content: flex-start;
+      margin-left: 20px;
+      margin-top: 20px;
+    }
   </style>
 </head>
 <body>
+  <div class="back-container">
+    <button class="back-button" onclick="window.history.back();">Back</button>
+  </div>
+
   <h1>Teacher Dashboard</h1>
 
   <!-- Teacher Data Panel -->
