--- a/painel_professor.html
+++ b/painel_professor.html
@@ -224,6 +224,11 @@
       });
     }
 
+    document.getElementById('teacher-avatar').addEventListener('change', function() {
+      const avatar = this.value;
+      document.getElementById('avatar-preview').src = 'imagens/' + avatar;
+    });
+
     function addStudentToClass(teacherId, classId) {
       const emailInput = document.getElementById(`student-email-${classId}`);
       const email = emailInput.value.trim();
@@ -241,16 +246,11 @@
             studentRef.child('atrelado_professor').once('value', snap => {
               const linkedTeacherId = snap.val();
 
-              if (!linkedTeacherId) {
-                // Caso 1: Não existe chave `atrelado_professor` ou está vazia
+              if (!linkedTeacherId || linkedTeacherId === teacherId) {
                 studentRef.child('atrelado_professor').set(teacherId).then(() => {
                   enrollStudentInClass(teacherId, classId, studentId, childSnapshot.val().nome);
                 });
-              } else if (linkedTeacherId === teacherId) {
-                // O aluno já está vinculado ao professor atual
-                enrollStudentInClass(teacherId, classId, studentId, childSnapshot.val().nome);
               } else {
-                // O aluno está vinculado a outro professor
                 alert("This student is already assigned to another teacher and cannot be added to your class.");
               }
             });
@@ -338,6 +338,11 @@
           });
         });
       });
+    }
+
+    function toggleStudentActions(studentId) {
+      const actions = document.getElementById(`student-actions-${studentId}`);
+      actions.style.display = actions.style.display === 'none' || actions.style.display === '' ? 'block' : 'none';
     }
   </script>
 </body>
