--- a/painel_professor.html
+++ b/painel_professor.html
@@ -89,7 +89,6 @@
 
     .student-list li {
       margin-bottom: 10px;
-      cursor: pointer;
     }
 
     .student-actions {
@@ -143,6 +142,21 @@
       justify-content: flex-start;
       margin-left: 20px;
       margin-top: 20px;
+    }
+
+    .student-name {
+      cursor: pointer;
+      text-decoration: underline;
+      color: #4CAF50;
+    }
+
+    .student-link {
+      display: inline;
+      font-weight: bold;
+    }
+
+    .student-link:hover {
+      color: #2e7d32;
     }
   </style>
 </head>
@@ -274,7 +288,7 @@
         nivel_em_curso: "level1"
       }).then(() => {
         alert("Student added successfully!");
-        loadStudents(teacherId, classId);
+        loadStudents(teacherId, classId); // Reload students to prevent duplication
       }).catch(error => {
         console.error("Error adding student:", error);
         alert("Error adding student. Please try again.");
@@ -323,9 +337,9 @@
             const isAttached = snap.val() !== false;
 
             const studentItem = document.createElement('li');
-            studentItem.className = isAttached ? '' : 'inactive';
+            studentItem.className = isAttached ? 'student-name' : 'student-name inactive';
             studentItem.innerHTML = `
-              <p onclick="toggleStudentActions('${studentId}')">${studentData.nome} ${!isAttached ? '<span class="inactive-msg">The student left the class</span>' : ''}</p>
+              <p onclick="toggleStudentActions('${studentId}')" class="student-link">${studentData.nome} ${!isAttached ? '<span class="inactive-msg">The student left the class</span>' : ''}</p>
               <div id="student-actions-${studentId}" class="student-actions">
                 <select ${!isAttached ? 'disabled' : ''} onchange="updateStudentLevel('${teacherId}', '${classId}', '${studentId}', this.value)">
                   <option value="level1" ${studentData.nivel_em_curso === 'level1' ? 'selected' : ''}>Level 1</option>
