--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -180,6 +180,7 @@
         firebase.auth().onAuthStateChanged(function (user) {
             const loginLink = document.getElementById("loginLink");
             const dropdown = document.getElementById("userDropdown");
+            
             if (user) {
                 console.log("Usuário logado:", user.uid);
 
@@ -212,6 +213,29 @@
                         <a href="#" id="logout">LEAVE</a>
                         ${dashboardLink}
                     `;
+
+                    // Lógica de liberação de níveis
+                    if (userRole === 'aluno') {
+                        if (userData.atrelado_professor) {
+                            // Se existe atrelado_professor, buscar o professor e verificar nivel_em_curso
+                            const professorRef = firebase.database().ref('usuarios/' + userData.atrelado_professor);
+                            professorRef.once('value').then((profSnapshot) => {
+                                const professorData = profSnapshot.val();
+                                const nivelLiberado = professorData.nivel_em_curso || 'level1';
+
+                                liberarNiveis([nivelLiberado]); // Liberar o nível especificado
+                            });
+                        } else {
+                            // Caso contrário, verificar progresso do aluno
+                            if (!userData.progresso || Object.keys(userData.progresso).length === 0) {
+                                liberarNiveis(['level1']); // Se progresso é nulo ou vazio, liberar somente Level 1
+                            } else {
+                                // Liberar níveis contidos em progresso
+                                const niveisLiberados = Object.keys(userData.progresso);
+                                liberarNiveis(niveisLiberados);
+                            }
+                        }
+                    }
                 }).catch((error) => {
                     console.error("Erro ao buscar dados do usuário:", error);
                 });
@@ -228,6 +252,24 @@
                 loginLink.href = "Formulario/login.html";
             }
         });
+
+        // Função para liberar níveis específicos
+        function liberarNiveis(niveis) {
+            document.querySelectorAll('.level-button').forEach((button, index) => {
+                const level = `level${index + 1}`;
+                if (niveis.includes(level)) {
+                    button.classList.add('liberado');
+                    button.style.filter = 'none'; // Remove filtro cinza
+                    button.onclick = () => {
+                        window.location.href = `nivel${String.fromCharCode(64 + (index + 1))}/index.html`; // 'A', 'B', etc.
+                    };
+                } else {
+                    button.classList.add('bloqueado');
+                    button.style.filter = 'grayscale(100%)';
+                    button.onclick = null; // Remove ação de clique
+                }
+            });
+        }
 
         // Função de logout
         document.getElementById("userDropdown").addEventListener("click", function(event) {
