--- a/index.html
+++ b/index.html
@@ -260,12 +260,14 @@
                 if (niveis.includes(level)) {
                     button.classList.add('liberado');
                     button.style.filter = 'none'; // Remove filtro cinza
+                    button.style.pointerEvents = 'auto'; // Ativa clique
                     button.onclick = () => {
                         window.location.href = `nivel${String.fromCharCode(64 + (index + 1))}/index.html`; // 'A', 'B', etc.
                     };
                 } else {
                     button.classList.add('bloqueado');
                     button.style.filter = 'grayscale(100%)';
+                    button.style.pointerEvents = 'none'; // Desativa clique
                     button.onclick = null; // Remove ação de clique
                 }
             });
