--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                 liberarNiveis(['level1']); // Se progresso é nulo ou vazio, liberar somente Level 1
                             } else {
                                 // Liberar níveis contidos em progresso
-                                const niveisLiberados = Object.keys(userData.progresso);
+                                const niveisLiberados = Object.keys(userData.progresso).map(nivel => nivel.toLowerCase());
                                 liberarNiveis(niveisLiberados);
                             }
                         }
