--- a/painel_professor.html
+++ b/painel_professor.html
@@ -358,6 +358,15 @@
       });
     }
 
+    function updateStudentLevel(teacherId, classId, studentId, level) {
+      const studentLevelRef = db.ref(`usuarios/${teacherId}/turmas/${classId}/students/${studentId}/nivel_em_curso`);
+      studentLevelRef.set(level).then(() => {
+        console.log(`Level updated to ${level}`);
+      }).catch(error => {
+        console.error("Error updating student level:", error);
+      });
+    }
+
     function toggleStudentActions(studentId) {
       const actions = document.getElementById(`student-actions-${studentId}`);
       actions.style.display = actions.style.display === 'none' || actions.style.display === '' ? 'block' : 'none';
