--- a/index.html
+++ b/index.html
@@ -156,14 +156,14 @@
     
     <script>
         var firebaseConfig = {
-             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-      authDomain: "hannahenglishcourse.firebaseapp.com",
-      databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
-      projectId: "hannahenglishcourse",
-      storageBucket: "hannahenglishcourse.appspot.com",
-      messagingSenderId: "449818788486",
-      appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-      measurementId: "G-07VVJG9LRS"
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS"
         };
 
         firebase.initializeApp(firebaseConfig);
@@ -180,8 +180,8 @@
         // Função para liberar níveis específicos
         function liberarNiveis(niveis) {
             document.querySelectorAll('.level-button').forEach((button, index) => {
-                const level = `level${index + 1}`;
-                if (niveis.includes(level)) {
+                const level = `level${String.fromCharCode(65 + index)}`; // Converte index para A, B, C, D
+                if (niveis.includes(level.toLowerCase())) {
                     button.classList.add('liberado');
                     button.style.filter = 'none';
                     button.style.pointerEvents = 'auto';
@@ -236,17 +236,14 @@
                             const professorRef = firebase.database().ref('usuarios/' + userData.atrelado_professor);
                             professorRef.once('value').then((profSnapshot) => {
                                 const professorData = profSnapshot.val();
-                                const nivelLiberado = professorData.students && professorData.students[user.uid] && professorData.students[user.uid].nivel_em_curso 
-                                    ? professorData.students[user.uid].nivel_em_curso 
-                                    : 'level1';
-
-                                liberarNiveis([nivelLiberado]);
+                                const nivelLiberado = professorData.students[user.uid].nivel_em_curso;
+                                liberarNiveis([nivelLiberado.toLowerCase()]);
                             }).catch((error) => {
                                 console.error("Erro ao buscar dados do professor:", error);
                             });
                         } else {
                             if (!userData.progresso || Object.keys(userData.progresso).length === 0) {
-                                liberarNiveis(['level1']);
+                                liberarNiveis(['levela']); // Libera o nível inicial, conforme a lógica
                             } else {
                                 const niveisLiberados = Object.keys(userData.progresso).map(nivel => nivel.toLowerCase());
                                 liberarNiveis(niveisLiberados);
