--- a/index.html
+++ b/index.html
@@ -146,10 +146,10 @@
         <main>
             <h2>Escolha seu nível</h2>
             <div class="levels">
-                <a href="nivelA/index.html" class="level-button levelA"></a>
-                <a href="nivelB/index.html" class="level-button levelB"></a>
-                <a href="nivelC/index.html" class="level-button levelC"></a>
-                <a href="nivelD/index.html" class="level-button levelD"></a>
+                <a href="nivelA/index.html" class="level-button levelA" id="Level1"></a>
+                <a href="nivelB/index.html" class="level-button levelB" id="Level2"></a>
+                <a href="nivelC/index.html" class="level-button levelC" id="Level3"></a>
+                <a href="nivelD/index.html" class="level-button levelD" id="Level4"></a>
             </div>
         </main>
     </div>
@@ -184,14 +184,15 @@
 
         // Função para liberar níveis específicos
         function liberarNiveis(niveis) {
-            document.querySelectorAll('.level-button').forEach((button, index) => {
-                const level = `level${index + 1}`;
+            document.querySelectorAll('.level-button').forEach((button) => {
+                const level = button.id;
                 if (niveis.includes(level)) {
                     button.classList.add('liberado');
                     button.style.filter = 'none';
                     button.style.pointerEvents = 'auto';
                     button.onclick = () => {
-                        window.location.href = `nivel${String.fromCharCode(65 + index)}/index.html`;
+                        const levelIndex = level.replace('Level', '');
+                        window.location.href = `nivel${String.fromCharCode(64 + parseInt(levelIndex))}/index.html`;
                     };
                 } else {
                     button.classList.remove('liberado');
@@ -243,7 +244,7 @@
                                 const professorData = profSnapshot.val();
                                 const nivelLiberado = professorData.students && professorData.students[user.uid] && professorData.students[user.uid].nivel_em_curso 
                                     ? professorData.students[user.uid].nivel_em_curso 
-                                    : 'level1';
+                                    : 'Level1';
 
                                 liberarNiveis([nivelLiberado]);
                             }).catch((error) => {
@@ -251,9 +252,9 @@
                             });
                         } else {
                             if (!userData.progresso || Object.keys(userData.progresso).length === 0) {
-                                liberarNiveis(['level1']);
+                                liberarNiveis(['Level1']);
                             } else {
-                                const niveisLiberados = Object.keys(userData.progresso).map(nivel => nivel.toLowerCase());
+                                const niveisLiberados = Object.keys(userData.progresso).map(nivel => nivel.charAt(0).toUpperCase() + nivel.slice(1));
                                 liberarNiveis(niveisLiberados);
                             }
                         }
@@ -271,7 +272,7 @@
                 console.log("Nenhum usuário logado");
                 loginLink.innerHTML = "Login";
                 loginLink.href = "Formulario/login.html";
-                bloquearTodosNiveis(); // Bloqueia todos os níveis se nenhum usuário estiver logado
+                bloquearTodosNiveis();
             }
         });
 
