--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
                         ${dashboardLink}
                     `;
 
+                    // Verificar progresso e liberar níveis
                     if (userRole === 'aluno') {
                         if (userData.atrelado_professor) {
                             const professorRef = firebase.database().ref('usuarios/' + userData.atrelado_professor);
@@ -245,16 +246,19 @@
                                 const nivelLiberado = professorData.students && professorData.students[user.uid] && professorData.students[user.uid].nivel_em_curso 
                                     ? professorData.students[user.uid].nivel_em_curso 
                                     : 'Level1';
-
+                                
+                                // Liberar apenas o nível especificado pelo professor
                                 liberarNiveis([nivelLiberado]);
                             }).catch((error) => {
                                 console.error("Erro ao buscar dados do professor:", error);
                             });
                         } else {
                             if (!userData.progresso || Object.keys(userData.progresso).length === 0) {
+                                // Caso o progresso esteja vazio, libera o primeiro nível apenas
                                 liberarNiveis(['Level1']);
                             } else {
-                                const niveisLiberados = Object.keys(userData.progresso).map(nivel => nivel.charAt(0).toUpperCase() + nivel.slice(1));
+                                // Libera os níveis de acordo com o progresso registrado no aluno
+                                const niveisLiberados = Object.keys(userData.progresso).map(nivel => nivel);
                                 liberarNiveis(niveisLiberados);
                             }
                         }
@@ -272,7 +276,7 @@
                 console.log("Nenhum usuário logado");
                 loginLink.innerHTML = "Login";
                 loginLink.href = "Formulario/login.html";
-                bloquearTodosNiveis();
+                bloquearTodosNiveis(); // Bloqueia todos os níveis se nenhum usuário estiver logado
             }
         });
 
