--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         function liberarNiveis(niveis) {
             document.querySelectorAll('.level-button').forEach((button) => {
                 const level = button.id;
+                console.log("Verificando nível do botão:", level);  // Log para verificar cada botão
                 if (niveis.includes(level)) {
                     button.classList.add('liberado');
                     button.style.filter = 'none';
@@ -247,8 +248,9 @@
                                     ? professorData.students[user.uid].nivel_em_curso 
                                     : null;
                                 
-                                // Liberar apenas o nível especificado pelo professor
+                                // Verificação do nível liberado
                                 if (nivelLiberado) {
+                                    console.log("Nível definido pelo professor:", nivelLiberado);
                                     liberarNiveis([nivelLiberado]);
                                 } else {
                                     console.error("Nenhum nível foi definido pelo professor.");
