--- a/index.html
+++ b/index.html
@@ -186,7 +186,6 @@
         function liberarNiveis(niveis) {
             document.querySelectorAll('.level-button').forEach((button) => {
                 const level = button.id;
-                console.log("Verificando nível do botão:", level);  // Log para verificar cada botão
                 if (niveis.includes(level)) {
                     button.classList.add('liberado');
                     button.style.filter = 'none';
@@ -242,13 +241,15 @@
                     if (userRole === 'aluno') {
                         if (userData.atrelado_professor) {
                             const professorRef = firebase.database().ref('usuarios/' + userData.atrelado_professor);
+                            console.log("ID do professor encontrado:", userData.atrelado_professor); // Adiciona log do professor
+
                             professorRef.once('value').then((profSnapshot) => {
                                 const professorData = profSnapshot.val();
+                                console.log("Dados do professor:", professorData); // Adiciona log dos dados do professor
                                 const nivelLiberado = professorData.students && professorData.students[user.uid] && professorData.students[user.uid].nivel_em_curso 
                                     ? professorData.students[user.uid].nivel_em_curso 
                                     : null;
-                                
-                                // Verificação do nível liberado
+
                                 if (nivelLiberado) {
                                     console.log("Nível definido pelo professor:", nivelLiberado);
                                     liberarNiveis([nivelLiberado]);
