--- a/index.html
+++ b/index.html
@@ -241,13 +241,21 @@
                     if (userRole === 'aluno') {
                         if (userData.atrelado_professor) {
                             const professorRef = firebase.database().ref('usuarios/' + userData.atrelado_professor);
-                            console.log("ID do professor encontrado:", userData.atrelado_professor); // Adiciona log do professor
+                            console.log("ID do professor encontrado:", userData.atrelado_professor);
 
                             professorRef.once('value').then((profSnapshot) => {
                                 const professorData = profSnapshot.val();
-                                console.log("Dados do professor:", professorData); // Adiciona log dos dados do professor
-                                const nivelLiberado = professorData.students && professorData.students[user.uid] && professorData.students[user.uid].nivel_em_curso 
-                                    ? professorData.students[user.uid].nivel_em_curso 
+                                console.log("Dados do professor:", professorData);
+
+                                const turmaId = '-O8mdLgStvNqNf6x-O5l'; // Substitua pelo ID da turma real
+                                const alunoId = user.uid;
+
+                                const nivelLiberado = professorData.turmas &&
+                                    professorData.turmas[turmaId] &&
+                                    professorData.turmas[turmaId].students &&
+                                    professorData.turmas[turmaId].students[alunoId] &&
+                                    professorData.turmas[turmaId].students[alunoId].nivel_em_curso
+                                    ? professorData.turmas[turmaId].students[alunoId].nivel_em_curso
                                     : null;
 
                                 if (nivelLiberado) {
@@ -281,7 +289,7 @@
                 console.log("Nenhum usuário logado");
                 loginLink.innerHTML = "Login";
                 loginLink.href = "Formulario/login.html";
-                bloquearTodosNiveis(); // Bloqueia todos os níveis se nenhum usuário estiver logado
+                bloquearTodosNiveis();
             }
         });
 
