--- a/index.html
+++ b/index.html
@@ -124,6 +124,33 @@
             cursor: pointer;
             font-size: 16px;
         }
+
+        /* Contêiner da imagem do convite */
+        .invitation-container {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        /* Estilo da imagem do convite como botão */
+        .invitation-button {
+            width: 250px; /* Ajuste o tamanho conforme necessário */
+            height: auto;
+            cursor: pointer;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: all 0.3s ease;
+        }
+
+        .invitation-button:hover {
+            transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+        }
+
+        /* Esconder o botão convite por padrão */
+        .invitation-container {
+            display: none;
+        }
     </style>
 </head>
 
@@ -145,6 +172,10 @@
         </header>
         <main>
             <h2>Escolha seu nível</h2>
+            <!-- Adicionando a imagem convite com aparência de botão -->
+            <div class="invitation-container" id="invitationContainer">
+                <img src="imagens/convite.png" alt="Convite" class="invitation-button" id="invitationButton">
+            </div>
             <div class="levels">
                 <a href="nivelA/index.html" class="level-button levelA" id="Level1"></a>
                 <a href="nivelB/index.html" class="level-button levelB" id="Level2"></a>
@@ -207,9 +238,11 @@
         firebase.auth().onAuthStateChanged(function (user) {
             const loginLink = document.getElementById("loginLink");
             const dropdown = document.getElementById("userDropdown");
+            const invitationContainer = document.getElementById("invitationContainer");
             
             if (user) {
                 console.log("Usuário logado:", user.uid);
+                invitationContainer.style.display = "none"; // Oculta a imagem convite quando logado
 
                 const userRef = firebase.database().ref('usuarios/' + user.uid);
                 userRef.once('value').then((snapshot) => {
@@ -290,6 +323,7 @@
                 loginLink.innerHTML = "Login";
                 loginLink.href = "Formulario/login.html";
                 bloquearTodosNiveis();
+                invitationContainer.style.display = "flex"; // Exibe a imagem convite quando não logado
             }
         });
 
@@ -337,6 +371,11 @@
                 });
             }
             installButton.style.display = 'none';
+        });
+
+        // Adiciona funcionalidade para o botão convite
+        document.getElementById("invitationButton").addEventListener("click", function() {
+            window.location.href = "convite.html";
         });
     </script>
 
