--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -122,13 +122,15 @@
     <input type="text" id="student-email" readonly>
     
     <label for="student-avatar">Choose Avatar</label>
-    <select id="student-avatar" disabled>
+    <select id="student-avatar">
       <option value="avatar_aluno1.png">Avatar 1</option>
       <option value="avatar_aluno2.png">Avatar 2</option>
       <option value="avatar_aluno3.png">Avatar 3</option>
       <option value="avatar_aluno4.png">Avatar 4</option>
     </select>
     <img id="avatar-preview" src="imagens/avatar_aluno1.png" alt="Avatar Preview" style="width: 100px; height: 100px; margin-top: 10px;">
+
+    <button onclick="saveAvatarChoice()">Save Avatar</button>
 
     <div id="teacher-info" style="margin-top: 20px;">
       <!-- Teacher linking information will be loaded here -->
@@ -189,6 +191,24 @@
         }
 
         loadProgress(studentId);
+      });
+
+      document.getElementById('student-avatar').addEventListener('change', function() {
+        const avatar = this.value;
+        document.getElementById('avatar-preview').src = 'imagens/' + avatar;
+      });
+    }
+
+    function saveAvatarChoice() {
+      const studentId = auth.currentUser.uid;
+      const avatar = document.getElementById('student-avatar').value;
+      const avatarRef = db.ref('usuarios/' + studentId + '/avatar');
+
+      avatarRef.set(avatar).then(() => {
+        alert("Avatar updated successfully!");
+      }).catch(error => {
+        console.error("Error updating avatar:", error);
+        alert("An error occurred while updating the avatar. Please try again.");
       });
     }
 
