--- a/painel_aluno.html
+++ b/painel_aluno.html
@@ -260,8 +260,7 @@
                 const isComplete = phaseSnap.val();
 
                 progressHTML += `
-                  <label>Phase ${phase} Complete</label>
-                  <input type="checkbox" ${isComplete ? 'checked' : ''} disabled>
+                  <p>Phase ${phase}: ${isComplete ? 'Complete' : 'Incomplete'}</p>
                 `;
               });
             });
