--- a/nivelA/index.html
+++ b/nivelA/index.html
@@ -6,71 +6,102 @@
     <title>Select a Unit - Level A</title>
     <link rel="stylesheet" href="../CSS/styles.css">
     <style>
-        /* Fundo de tela para o contêiner do mapa */
         .map-container {
             width: 100%;
-            height: 200vh;
+            height: 100vh;
             position: relative;
             background-image: url('../../imagens/fundo.png');
             background-repeat: repeat;
             background-size: 200%;
             overflow-y: auto;
-            transform-origin: center center;
-            transition: transform 1s ease;
         }
 
-        /* Adiciona apenas a funcionalidade de desabilitar os botões */
-        .disabled {
-            pointer-events: none;
-            opacity: 0.5;
-        }
-
-        /* Centraliza o botão Back */
         .back-button {
             display: block;
             margin: 20px auto;
             padding: 10px 20px;
         }
 
-        /* Estilo para centralizar e limitar o número de colunas */
         .units {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
             gap: 20px;
             padding: 20px;
-            max-width: 800px; /* Limita a largura para centralizar */
-            margin: 0 auto; /* Centraliza o grid */
-            justify-content: center; /* Centraliza o conteúdo na coluna única */
+            max-width: 800px;
+            margin: 0 auto;
+            justify-content: center;
         }
 
-        @media (min-width: 800px) {
-            .units {
-                grid-template-columns: repeat(4, 1fr); /* Máximo de 4 colunas */
-                justify-content: start; /* Alinha as colunas à esquerda para telas grandes */
-            }
+        .unit-button {
+            text-align: center;
+            padding: 10px 0;
+            background-color: #4CAF50;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .unit-button.disabled {
+            background-color: gray;
+            pointer-events: none;
+            opacity: 0.6;
         }
     </style>
 </head>
 <body>
     <div class="map-container">
         <header>
-            <h1>Select a Unit</h1>
+            <h1 style="text-align: center;">Select a Unit</h1>
         </header>
         <main>
             <div class="units">
-                <a href="unidade1/index.html" class="unit-button">Unit 1</a>
-                <a href="unidade2/index.html" class="unit-button">Unit 2</a>
-                <a href="unidade3/index.html" class="unit-button">Unit 3</a>
-                <a href="unidade4/index.html" class="unit-button">Unit 4</a>
-                <a href="#" class="unit-button disabled">Unit 5</a>
-                <a href="#" class="unit-button disabled">Unit 6</a>
-                <a href="#" class="unit-button disabled">Unit 7</a>
-                <a href="#" class="unit-button disabled">Unit 8</a>
-                <a href="#" class="unit-button disabled">Unit 9</a>
-                <a href="#" class="unit-button disabled">Unit 10</a>
+                <a href="unidade1/index.html" id="unit1" class="unit-button">Unit 1</a>
+                <a href="unidade2/index.html" id="unit2" class="unit-button">Unit 2</a>
+                <a href="unidade3/index.html" id="unit3" class="unit-button">Unit 3</a>
+                <a href="unidade4/index.html" id="unit4" class="unit-button">Unit 4</a>
+                <a href="unidade5/index.html" id="unit5" class="unit-button">Unit 5</a>
+                <a href="unidade6/index.html" id="unit6" class="unit-button">Unit 6</a>
+                <a href="unidade7/index.html" id="unit7" class="unit-button">Unit 7</a>
+                <a href="unidade8/index.html" id="unit8" class="unit-button">Unit 8</a>
+                <a href="unidade9/index.html" id="unit9" class="unit-button">Unit 9</a>
+                <a href="unidade10/index.html" id="unit10" class="unit-button">Unit 10</a>
             </div>
             <button class="back-button" onclick="window.location.href='../index.html';">Back</button>
         </main>
     </div>
+
+    <!-- Firebase Configuration and Initialization -->
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS",
+            databaseURL: "https://hannahenglishcourse-default-rtdb.asia-southeast1.firebasedatabase.app"
+        };
+        firebase.initializeApp(firebaseConfig);
+
+        const db = firebase.database();
+        const userId = 'zZystjhTmdgxC7USqV593vrSxx82'; // Substitua pelo ID do usuário
+
+        // Função para verificar o progresso do aluno
+        db.ref(`usuarios/${userId}/progresso/Level1`).once('value', snapshot => {
+            const progresso = snapshot.val();
+            const units = document.querySelectorAll('.unit-button');
+
+            units.forEach(unit => {
+                const unitId = unit.id.replace('unit', 'Unit');
+                if (!progresso || !progresso[unitId]) {
+                    unit.classList.add('disabled');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
