--- a/nivelA/index.html
+++ b/nivelA/index.html
@@ -97,7 +97,7 @@
 
             units.forEach(unit => {
                 const unitId = unit.id.replace('unit', 'Unit');
-                if (!progresso || !progresso[unitId]) {
+                if (!progresso || !progresso[unitId] || progresso[unitId].fase1 !== true) {
                     unit.classList.add('disabled');
                 }
             });
