--- a/nivelA/index.html
+++ b/nivelA/index.html
@@ -71,9 +71,9 @@
         </main>
     </div>
 
-    <!-- Firebase Configuration and Initialization -->
-    <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.20.0/firebase-database.js"></script>
+    <!-- Firebase Configuration and Initialization (Namespaced SDK) -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
