--- a/nivelA/index.html
+++ b/nivelA/index.html
@@ -20,6 +20,12 @@
             display: block;
             margin: 20px auto;
             padding: 10px 20px;
+            background-color: black;
+            color: white;
+            text-align: center;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
         }
 
         .units {
@@ -29,23 +35,36 @@
             padding: 20px;
             max-width: 800px;
             margin: 0 auto;
-            justify-content: center;
+            justify-content: center; /* Centraliza os itens em telas menores */
         }
 
+        /* Estilo dos botões das unidades */
         .unit-button {
             text-align: center;
             padding: 10px 0;
-            background-color: #4CAF50;
-            color: white;
+            color: green;
+            border: 2px solid green;
+            border-radius: 20px;
+            background-color: white;
             text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s ease;
+            transition: background-color 0.3s ease, color 0.3s ease;
+            width: 100%; /* Preenche o espaço disponível */
+            max-width: 200px;
+            box-sizing: border-box;
         }
 
+        /* Hover dos botões das unidades */
+        .unit-button:hover {
+            background-color: green;
+            color: white;
+        }
+
+        /* Botões desabilitados */
         .unit-button.disabled {
-            background-color: gray;
+            background-color: rgba(128, 128, 128, 0.3); /* Cinza translúcido */
+            border-color: rgba(128, 128, 128, 0.5); /* Cinza mais escuro */
+            color: rgba(128, 128, 128, 0.5); /* Cinza claro */
             pointer-events: none;
-            opacity: 0.6;
         }
     </style>
 </head>
