--- a/nivelA/index.html
+++ b/nivelA/index.html
@@ -35,7 +35,7 @@
             padding: 20px;
             max-width: 800px;
             margin: 0 auto;
-            justify-content: center;
+            justify-content: center; /* Centraliza os itens em telas menores */
         }
 
         /* Estilo dos botões das unidades */
@@ -110,12 +110,21 @@
         const db = firebase.database();
         const auth = firebase.auth();
 
-        // Função para carregar o progresso do aluno com base no nível
-        function carregarProgresso(userId, level) {
-            db.ref(`usuarios/${userId}/progresso/${level}`).once('value')
+        // Carregar o progresso do aluno quando ele está autenticado
+        auth.onAuthStateChanged(user => {
+            if (user) {
+                console.log("Usuário autenticado:", user.uid);
+                carregarProgresso(user.uid); 
+            } else {
+                console.error("Erro: Usuário não autenticado");
+            }
+        });
+
+        function carregarProgresso(userId) {
+            db.ref(`usuarios/${userId}/progresso/Level1`).once('value')
                 .then(snapshot => {
                     const progresso = snapshot.val();
-                    console.log(`Progresso do usuário no ${level}:`, progresso);
+                    console.log("Progresso do usuário:", progresso); // Log para verificar os dados recebidos
 
                     const units = document.querySelectorAll('.unit-button');
                     
@@ -128,22 +137,9 @@
                     });
                 })
                 .catch(error => {
-                    console.error(`Erro ao acessar o banco de dados para o ${level}:`, error);
+                    console.error("Erro ao acessar o banco de dados:", error);
                 });
         }
-
-        // Carregar o progresso do aluno quando ele está autenticado
-        auth.onAuthStateChanged(user => {
-            if (user) {
-                console.log("Usuário autenticado:", user.uid);
-
-                // Defina o nível desejado aqui. Por exemplo:
-                let nivelAtual = 'Level2'; // Altere conforme necessário
-                carregarProgresso(user.uid, nivelAtual); 
-            } else {
-                console.error("Erro: Usuário não autenticado");
-            }
-        });
     </script>
 </body>
 </html>
